@@ -26,7 +26,10 @@
 #
 ##############################################################################
 
-class smconv_XML_Importer(saxutils.DefaultHandler):
+from xml.sax import saxutils, make_parser
+from xml.sax.handler import feature_namespaces, ContentHandler
+
+class smconv_XML_Importer(ContentHandler):
     
     def __init__(self, default_cat=None, reset_learning_data=False):
         
